fix card alignment

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -93,48 +93,3 @@
   max-height: 0;
   opacity: 0;
 }
-
-/* Row Layout */
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 -0.5rem;
-}
-
-/* Card Layout */
-.row > * {
-  flex: 0 0 33.333333%;
-  padding: 0.5rem;
-  box-sizing: border-box;
-}
-
-.row img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
-@media screen and (max-width: 996px) {
-  .row > * {
-    flex: 0 0 50%;
-  }
-
-  .toggle-section {
-    font-size: 1rem;
-    padding: 0.5rem;
-  }
-
-  .toggle-title {
-    font-size: 1rem;
-  }
-
-  .toggle-icon {
-    font-size: 1rem;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .row > * {
-    flex: 0 0 100%;
-  }
-}
